# oikos

./: .gitignore  Cargo.toml  README.md  justfile  log4rs.yml  shell.nix
nix/: default.nix  nixpkgs.nix  openapi_generator.nix  overlay.nix  rerun-fixed.nix
nix/oikos/: oikos_log.nix  oikos_server.nix  oikos_service.nix  oikos_web.nix
src/openapi_templates/rust/partials/: data_type.hbs  example.hbs  operation_examples.hbs  operation_types.hbs  parameter_type.hbs  schema.hbs  schema_example.hbs  subtypes.hbs  subtypes_example.hbs  test_operation_client.hbs
src/openapi_templates/rust/template/: Cargo.toml  lib.rs  openapi_serialization.rs
src/openapi_templates/rust/template/client/: mod.rs
src/openapi_templates/rust/template/example/: mod.rs
src/openapi_templates/rust/template/examples/: main.rs
src/openapi_templates/rust/template/models/: mod.rs
src/openapi_templates/rust/template/security/: mod.rs
src/openapi_templates/rust/template/server/: mock.rs  mod.rs
src/rust/oikos_api/: Cargo.toml  lib.rs  openapi_serialization.rs
src/rust/oikos_api/client/: mod.rs
src/rust/oikos_api/example/: mod.rs
src/rust/oikos_api/examples/: main.rs
src/rust/oikos_api/models/: mod.rs
src/rust/oikos_api/security/: mod.rs
src/rust/oikos_api/server/: mock.rs  mod.rs
src/rust/oikos_server/: Cargo.toml
src/rust/oikos_server/reference/: openapi.yaml
src/rust/oikos_server/reference/models/: access_token.v1.yaml  access_token_request.v1.yaml  conflict.v1.yaml  forbidden.v1.yaml  info.v1.yaml  ingredient.v1.yaml  ingredient_category.v1.yaml  meal.v1.yaml  meal_plans.v1.yaml  notfound.v1.yaml  recipe_ingredient_model.v1.yaml  recipe_list.v1.yaml  recipe_model.v1.yaml  shopping_list.v1.yaml  shopping_list_category.v1.yaml  shopping_list_item.v1.yaml  temp_unit.v1.yaml  unauthorized.v1.yaml
src/rust/oikos_server/src/: main.rs  server.rs
src/rust/oikos_server/src/server/: auth.rs  meal_plan.rs  recipe.rs  shopping_list.rs
src/rust/oikos_server/src/server/database/: ingredient.rs
src/rust/oikos_server/static/: .gitignore  index.html  package.json  styles.css
src/rust/oikos_web/: Cargo.toml
src/rust/oikos_web/src/: date.rs  lib.rs  root.rs
src/rust/oikos_web/src/components/: mod.rs  tabs.rs  token.rs
src/rust/oikos_web/src/data/: mod.rs
src/rust/oikos_web/src/pages/: auth.rs  mod.rs  new_recipe.rs  planning.rs  recipe.rs  recipe_list.rs  search.rs  shopping_list.rs  token.rs
src/rust/oikos_web/src/services/: auth_service.rs  meal_plans_service.rs  mod.rs  recipe_service.rs  request.rs
src/rust/open_recipe_format/: Cargo.toml
src/rust/open_recipe_format/src/: ingredient.rs  lib.rs  yields.rs
src/rust/open_recipe_format/tests/: deserialize.rs
src/rust/uniqdb/: Cargo.toml
src/rust/uniqdb/src/: github.rs  lib.rs  mongodb.rs
src/systemd/: oikos.service
src/web/public/: openapi.json
