[package]
name = "uniqdb"
version = "0.1.0"
authors = ["Noel Martignoni <noel.martignoni@easymov.fr>"]
edition = "2018"

[lib]
name = "uniqdb"
path = "src/lib.rs"

[dependencies]
anyhow = "1.0.26"
github-rs = "0.7.0"
serde_json = "1.0"
thiserror = "1.0.11"
base64 = "0.13.0"

[dependencies.serde]
features = ["derive"]
version = "1.0"