# Generated with openapi_generator {{openapi_generator_version}}

[package]
name = "{{snakecase info.title}}"
version = "{{info.version}}"
{{~#with info.contact}}
authors = ["{{name}}{{#if email}} <{{email}}>{{/if}}"]
{{~/with}}
edition = "2018"

[lib]
name = "{{snakecase info.title}}"
path = "lib.rs"

[[example]]
name = "{{snakecase info.title "example"}}"
path = "examples/main.rs"

[dependencies]
anyhow = { version = "1.0.26", optional = true }
actix-http = { version = "2.1.0", optional = true }
actix-multipart = { version = "0.3.0", optional = true }
actix-rt = { version = "1.1.1", optional = true }
actix-service = { version = "1.0.6", optional = true }
actix-web = { version = "3.2.0", optional = true }
async-std = { version = "1.7.0", optional = true }
async-trait = { version = "0.1.41", optional = true }
displaydoc = { version = "0.1.7", optional = true }
futures = { version = "0.3.7", optional = true }
log = {version = "0.4.11", optional = true}
maplit = "1.0.2"
mockiato = { version = "0.9.5", optional = true }
mockito = { version = "0.27.0", optional = true }
once_cell = "1.4.1"
reqwest = { version = "0.10.8", features = ["json"], optional = true }
serde = { version = "1.0.117", features = ["derive"] }
serde_json = { version = "1.0.59" }
serde_urlencoded = { version = "0.7.0", optional = true }
thiserror = { version = "1.0.22", optional = true }
url = { version = "2.1.1", optional = true }
# wasm-bindgen = { version = "0.2.67", optional = true }
yew = { version = "0.17", optional = true }

[dev-dependencies]
femme = "1.3.0"

[features]
default = ["server"]
server = [
    "actix-web",
    "actix-service",
    "actix-http",
    "async-trait",
    "actix-multipart",
    "actix-rt",
    "futures"]
client = [
    "reqwest",
    "async-std",
    "url",
    "mockiato",
    "thiserror",
    "displaydoc",
    "serde_urlencoded",
    "log"]
mock-server = ["log", "mockito"]
wasm = ["yew", "anyhow"]